--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Unimmerse
 logo: /assets/img/logo.jpg
-description: A place for the stunning moments
+description: views from the world
 show_downloads: false
 google_analytics: UA-87983556-6
 theme: jekyll-theme-minimal
