update google analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Unimmerse
 logo: /assets/img/logo.jpg
 description: Views around the world
 show_downloads: false
-google_analytics: UA-87983556-6
+google_analytics: G-066ZX508DR
 theme: jekyll-theme-minimal
