--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Unimmerse
 logo: /assets/img/logo.jpg
 description: Views around the world
 show_downloads: false
-google_analytics: G-066ZX508DR
+google_analytics: G-1H2YK54ZQ8
 theme: jekyll-theme-minimal
